feat(replica): server implementation
