# src/replica/models/file.ts
@@ -1,0 +1,9 @@
+export interface File {
+  fileId: string;
+
+  replicaId: string;
+
+  createdAt: Date;
+
+  updatedAt: Date;
+}
